# healthfit-advisor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
agents/: hermes.yaml  openai.yaml  openclaw.yaml
assets/: DOWNLOAD_STATUS.md
examples/: intake_payload.json  menu_request.json
references/: exercise_eat_back_policy.md  implementation-notes.md  phase3_output_schema.json
scripts/: bootstrap_food_db.py  brand_menu_repository.py  bwp_calculator.py  bwp_dynamic_solver.py  calorie_tracker.py  can_i_eat.py  cron_notifications.py  data_quality.py  db_manager.py  db_schema.sql  diet_dialogue.py  dining_advisor.py  dining_context_engine.py  dining_models.py  dining_user_context.py  exercise_tracker.py  food_analyzer.py  food_db_cache.py  food_db_import_pivot.py  food_db_importer.py  food_db_lookup.py  food_db_status.py  food_preference_engine.py  gi_guide.py  goal_conflict_engine.py  health_alerts.py  healthfit.py  intake_flow.py  integration_test.py  meal_planner.py  menstrual_tracker.py  menu_advisor.py  menu_image_analyzer.py  menu_item_scoring.py  menu_nutrition_estimator.py  notification_scheduler.py  plan_formatter.py  privacy_manager.py  profile_manager.py  recommendation_explainer.py  (+10 more)
tests/: evals.json  test_bwp_calculator.py  test_bwp_dynamic_solver.py  test_calorie_tracker.py  test_can_i_eat.py  test_db_manager.py  test_diet_dialogue.py  test_dining_advisor.py  test_dining_context_engine.py  test_dining_fixes.py  test_dining_user_context.py  test_exercise_tracker.py  test_food_analyzer.py  (+26 more)
(+3 files in other folders)
